fix(metrics): Expose metrics port on traefik container

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -15,6 +15,7 @@ services:
     ports:
       - "{{ traefik_container_http_port }}:{{ traefik_http_port }}"
       - "{{ traefik_container_https_port }}:{{ traefik_https_port }}"
+      - "{{ traefik_container_metrics_port }}:{{ traefik_metrics_port }}"
     networks:
 {{ traefik_networks | to_nice_yaml | indent(6, first=true) }}
     environment:
